# ferrospice

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FIXING_HARNESS_TESTS.md  README.md  flake.nix  justfile  release-plz.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release-plz.yml
examples/: ac_analysis.rs  dc_operating_point.rs  dc_sweep.rs  transient.rs
ferrospice-core/: Cargo.toml
ferrospice-core/src/: ac.rs  bjt.rs  bsim3.rs  bsim3soi_dd.rs  bsim3soi_fd.rs  bsim3soi_pd.rs  bsim4.rs  diode.rs  jfet.rs  lib.rs  mna.rs  mosfet.rs  newton.rs  noise.rs  pz.rs  sens.rs  simulate.rs  sparse.rs  subckt.rs  tf.rs  transient.rs  vbic.rs  waveform.rs
ferrospice-core/tests/: ac.rs  bench.rs  bsim3.rs  bsim3soi_fd.rs  bsim3soi_pd.rs  bsim4.rs  jfet.rs  resistance.rs  sensitivity.rs  subcircuit.rs  transient.rs
ferrospice-netlist/: Cargo.toml
ferrospice-netlist/src/: lib.rs  parse.rs
ferrospice-netlist/tests/: netlist.rs
scripts/: bench-targets.sh
scripts/ralph/: .last-branch  CLAUDE.md  prd-archive.json  prd.json  progress.txt  ralph.sh  stream-formatter.sh
scripts/ralph/passes/: architecture.md  implementation.md  project-management.md
spice-netlist/: Cargo.toml
spice-netlist/src/: lib.rs  parse.rs
spice-netlist/tests/: netlist.rs
src/: main.rs
tasks/: prd-simulation-engine.md
thevenin/: CHANGELOG.md  Cargo.toml
thevenin-types/: CHANGELOG.md  Cargo.toml
thevenin-types/src/: lib.rs  parse.rs
thevenin-types/tests/: netlist.rs
thevenin/src/: ac.rs  bjt.rs  bsim3.rs  bsim3soi_dd.rs  bsim3soi_fd.rs  bsim3soi_pd.rs  bsim4.rs  cpl.rs  device_stamp.rs  diode.rs  expr.rs  hfet.rs  jfet.rs  lib.rs  libproc.rs  ltra.rs  mesa.rs  mesfet.rs  mna.rs  mos6.rs  mosfet.rs  newton.rs  noise.rs  output.rs  physics.rs  pz.rs  sens.rs  simulate.rs  sparse.rs  subckt.rs  tf.rs  transient.rs  txl.rs  vbic.rs  waveform.rs
thevenin/tests/: ac.rs  bench.rs  bsim3.rs  bsim3soi_fd.rs  bsim3soi_pd.rs  bsim4.rs  cpl.rs  harness.rs  hfet.rs  jfet.rs  ltra.rs  mesa.rs  mesfet.rs  mos6.rs  regression_func.rs  regression_lib.rs  regression_misc.rs  regression_model.rs  regression_parser.rs  regression_subckt.rs  resistance.rs  sensitivity.rs  subcircuit.rs  transient.rs  txl.rs  vbic.rs
