[workspace]
members = ["ferrospice-netlist", "ferrospice-core"]
resolver = "3"

[workspace.dependencies]
thiserror = "2"
facet = "0.44"
wasm-bindgen-test = "0.3"
faer = {version = "0.24", default-features = false, features = ["npy", "rand", "sparse-linalg", "std"]}
[target.'cfg(not(target_family = "wasm"))'.dependencies]
faer = {version = "0.24", default-features = false, features = ["npy", "rand", "rayon", "sparse-linalg", "std"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[package]
name = "ferrospice"
version = "0.1.0"
edition = "2024"
description = "A Rust rewrite of ngspice - open-source mixed-level/mixed-signal electronic circuit simulator"
license = "BSD-3-Clause"

[dependencies]
ferrospice-netlist = { path = "ferrospice-netlist" }
ferrospice-core = { path = "ferrospice-core" }

[dev-dependencies]
wasm-bindgen-test.workspace = true
