[workspace]
members = ["thevenin-types", "thevenin"]
resolver = "3"

[workspace.dependencies]
thiserror = "2"
facet = "0.44"
wasm-bindgen-test = "0.3"
faer = {version = "0.24", default-features = false, features = ["npy", "rand", "sparse-linalg", "std"]}
[target.'cfg(not(target_family = "wasm"))'.dependencies]
faer = {version = "0.24", default-features = false, features = ["npy", "rand", "rayon", "sparse-linalg", "std"]}
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[package]
name = "thevenin-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for thevenin - a Rust rewrite of ngspice circuit simulator"
license = "BSD-3-Clause"
repository = "https://github.com/cramt/thevenin"
publish = false

[dependencies]
thevenin-types = { path = "thevenin-types" }
thevenin = { path = "thevenin" }

[dev-dependencies]
wasm-bindgen-test.workspace = true
