[package]
name = "thevenin-types"
version = "0.1.0"
edition = "2024"
description = "Types and parser for SPICE netlists (ngspice dialect)"
license = "BSD-3-Clause"
repository = "https://github.com/cramt/thevenin"

[dependencies]
thiserror.workspace = true
facet.workspace = true

[dev-dependencies]
approx = "0.5"
wasm-bindgen-test.workspace = true
