[package]
name = "thevenin"
version = "0.1.0"
edition = "2024"
description = "Core simulation engine for thevenin: sparse matrices, MNA assembly, solvers"
license = "BSD-3-Clause"
repository = "https://github.com/cramt/thevenin"

[dependencies]
thiserror.workspace = true
faer.workspace = true
thevenin-types = { path = "../thevenin-types", version = "0.1.0" }

[dev-dependencies]
approx = "0.5"
wasm-bindgen-test.workspace = true
getrandom = { version = "0.3", features = ["wasm_js"] }
web-time = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
